--- a/partials/home.html
+++ b/partials/home.html
@@ -1,6 +1,6 @@
 <div class="row bg-light-grey border-bottom">
 	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-		<span class="head1"><span class="italics">Lets</span>Venture Dictionary</span><br>
+		<span class="head1"><span class="italics">Audio</span> Dictionary</span><br>
 		<span class="italics">--- a quest to design advanced, feature rich online vocabulary builder</span>
 	</div>
 	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
